# assistant_matanne

./: .dockerignore  .env.example  .env.example.images  .gitignore  .pre-commit-config.yaml  00_RAPPORT_FINAL_COMPLET.md  00_SYNTHESE_RAPPORTS.txt  ACTION_IMMEDIATE_ERREUR_CALENDAR.md  ACTION_PHASE_1_IMMEDIATEMENT.md  ACTION_PLAN.md  ACTION_PLAN.py  ACTION_PLAN_FINALIZATION.md  ACTION_PLAN_J6_TO_J10.md  AFFICHAGE_RESUME.sh  ANALYSE_APPROFONDIE.md  ANALYSE_COMPLETE.html  ANALYSE_COMPLETE.md  ANALYSE_COUVERTURE_REELLE.md  ANALYSE_REELLE_COUVERTURE.md  ANALYSIS_PHASE18_J6.md  API_MAINTENANCE_GUIDE.md  API_MAINTENANCE_SUMMARY.md  API_TESTS_4WEEKS_COMPLETE.md  API_TESTS_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE_IMAGES.md  AUDIT_COMPLET_AVRIL_2026.html  AUDIT_COMPLET_AVRIL_2026.md  AUDIT_ET_PLAN_AMELIORATION.md  AUDIT_TESTS_EXISTANTS.md  Architecture Complète - README.md  BARCODE_RAPPORTS_SETUP.md  BUG_FIXES_REPORT_29JAN.md  BUG_REPORT.md  CHANGELIST_FAMILLE.md  CHANGELOG.md  CHANGELOG_FAMILLE.md  CHANGELOG_PHASE10.md  CHANGES_IMAGE_GENERATION.md  CHECKLIST_DEV.md  CHECKLIST_FINAL.md  (+939 more)
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.streamlit/: config.toml
ai/: assistant.py  planner.py  predictor.py  summarizer.py
alembic/: README.md  env.py
assets/: styles.css
config/: .env.example  settings.yaml
core/: config.py  database.py  helpers.py  models.py  orchestrator.py  planner.py  schema_manager.py  test_manager.py
data/: TEMPLATE_IMPORT.csv  entretien_catalogue.json  metadata.json  normes_oms.json  parisSportifs - Recapitulatif.csv  plantes_catalogue.json  recettes_standard.json  templates_checklist_voyage.json
docs/: A11Y_AUDIT.md  ADMIN.md  ADMIN_GUIDE.md  ADMIN_MODE.md  ADMIN_QUICK_REFERENCE.md  ADMIN_RUNBOOK.md  AI_INTEGRATION_GUIDE.md  AI_SERVICES.md  ANALYSE_MODULE_CUISINE.html  ANALYSE_MODULE_JEUX.html  API_REFERENCE.md  API_SCHEMAS.md  ARCHITECTURE.md  AUDIT_COMPLET_MATANNE.html  AUTOMATIONS.md  AUTOMATION_GUIDE.md  CHANGELOG.md  CHANGELOG_MODULES.md  CORE_ANALYSIS_REPORT.md  CRON_DEVELOPMENT.md  CRON_JOBS.md  DATA_MODEL.md  DEPLOYMENT.md  DEPRECATED.md  DESIGN_SYSTEM.md  DEVELOPER_SETUP.md  ERD_SCHEMA.md  EVENT_BUS.md  EXPLAIN_ANALYZE_SPRINT2.md  FONCTIONNALITES.md  FRONTEND_ARCHITECTURE.md  GAMIFICATION.md  GOOGLE_ASSISTANT_SETUP.md  GUIDE_UTILISATEUR.md  HABITAT_MODULE.md  INDEX.md  INTER_MODULES.md  INTER_MODULES_GUIDE.md  INTER_MODULES_MAP.md  JEUX_AMELIORATIONS_PLAN.md  (+40 more)
extension-chrome/: README.md  background.js  bridge.js  content.js  manifest.json  popup.css  popup.html  popup.js
frontend/: Dockerfile.staging  README.md  build_attempt_turbo.txt  build_out.txt  build_output.txt  build_p2.txt  build_stdout.txt  build_wave10.txt  build_wave11.txt  build_wave11b.txt  components.json  coverage-output.txt  coverage-output2.txt  coverage-output3.txt  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  ruff_full.txt  ruff_output.txt  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  typedoc.json  vercel.json  vitest.config.ts  vitest.setup.ts
modules/: __init__.py  accueil.py  bien_etre.py  calendrier.py  inventaire.py  jardin.py  parametres.py  projets_maison.py  recettes.py  repas_batch.py  routines.py  suggestions.py  suivi_enfant.py  test_mode.py  weather_ui.py
mutants/: mutmut-cicd-stats.json  mutmut-stats.json  pyproject.toml
reports/: MODULES_ANALYSIS_REPORT.md  all_domains_cov.txt  depenses_final.txt  dom_test.txt  famille_cov.txt  test_audit_fast.csv
scripts/: README.md  __init__.py  _fix_jeux_paris.py  _refactor_phase8.py  _refactor_phase8b.py  _refactor_phase8c.py  analysis_output.txt  analyze_api.py  analyze_failures.py  analyze_phase18_errors.py  audit_metrics.py  audit_orm_sql.py  audit_params.py  audit_tests.py  audit_tests_fast.py  backup_db.py  convert_to_utf8.py  coverage_summary.py  create_maison_tables.py  debug_mappers.py  deploy_famille.sh  execute_5_phases.py  execute_phases_3_5.py  export_courses.py  export_sql_to_supabase.py  finalize_french_migration.py  fix_emojis.py  fix_hub_ui.py  fix_inits.py  fix_mojibake.py  generate_complete_schema.py  generate_correct_sql.py  generate_lazy_imports.py  generate_pwa_icons.py  generate_screenshots.ts  generate_test_skeletons.py  generate_vapid.py  import_recettes_pdf.py  import_recettes_standard.py  init_db.py  (+35 more)
sql/: 001_add_famille_models.sql  002_add_relations_famille.sql  003_add_shopping_items_famille.sql  006_add_modeles_courses.sql  008_add_maison_models.sql  009_create_all_tables_CORRECT.sql  009_create_all_tables_complete.sql  010_add_updated_at_columns.sql  013_add_jeux_tables_manual.sql  014_add_batch_cooking.sql  014_add_recette_equilibre_fields.sql  015_famille_refonte.sql  016_add_user_preferences.sql  016_maison_extended.sql  017_add_garden_photos_column.sql  018_enable_rls_all_tables.sql  019_temps_entretien.sql  022_action_history.sql  INIT_COMPLET.sql  SUPABASE_COMPLET.sql  SUPABASE_COMPLET_V3.sql  SUPABASE_SCHEMA_CORRECT.sql  install_phase2.sh  migration_new_features.sql  migration_new_features_v2.sql  utilitaires_schema.sql
src/: __init__.py  app.py  app_old.py  constants.py
static/: manifest.json  offline-sync.js  offline.html  sw.js
tests/: README.md  conftest.py  conftest_modules_services.py  conftest_ui_utils.py  test_accueil.py  test_accueil_logic.py  test_accueil_module.py  test_action_history.py  test_ai_parser.py  test_all_logic_clean.py  test_all_logic_modules.py  test_api.py  test_api_extended.py  test_app.py  test_app_coverage.py  test_app_main.py  test_auth.py  test_bankroll_manager.py  test_barcode.py  test_barcode_module.py  test_base_service.py  test_base_service_unified.py  test_bridges_domain_workflows.py  test_bridges_inter_modules.py  test_budget.py  test_cache.py  test_cache_multi.py  test_calendar_sync.py  test_checklist_pdf.py  test_core_refactoring.py  test_core_utils.py  test_courses.py  test_courses_logic.py  test_courses_service.py  test_coverage_boost_core.py  test_coverage_boost_final.py  (+95 more)
tools/: README.md  (+11 more)
(+7073 files in other folders)
