[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.48"
psycopg2-binary = "^2.9.9"
beautifulsoup4 = ">=4.12.0"
lxml = ">=4.9.0"
requests =">=2.31.0"
requests-oauthlib = "^2.0.0"
pandas = "^2.1.4"
python-dateutil = "^2.8.2"
plotly = "^5.18.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.13.1"
email-validator = "^2.1.0"
python-dotenv = "^1.2.2"
httpx = ">=0.27,<0.29"
mistralai = "^1.0.0"
# API REST
fastapi = "^0.135.2"
uvicorn = {extras = ["standard"], version = "^0.42.0"}
python-multipart = ">=0.0.6"
# Authentication
supabase = "^2.28.3"
PyJWT = "^2.12.1"
# Barcode scanning
pyzbar = {version = "^0.1.9", optional = true}
opencv-python-headless = {version = "^4.9.0", optional = true}
# Redis (production rate limiting & cache)
redis = {version = "^5.0.0", optional = true}
# PDF generation
reportlab = "^4.0.0"
# Scheduler
apscheduler = "^3.10.0"
# ML predictions (scikit-learn)
scikit-learn = {version = "^1.4.0", optional = true}
joblib = {version = "^1.3.0", optional = true}
# Error tracking (production)
sentry-sdk = {version = "^2.55.0", extras = ["sqlalchemy"], optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.2"
ruff = "^0.15.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "E402", "E711", "E712", "E722", "E741", "B007", "B008", "B015", "B017", "B023", "B025", "B904", "C401", "C403", "C408", "C414", "C416", "F401", "F402", "F403", "F821", "F822", "F823", "F841", "UP035"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "@abstractmethod",
]
precision = 2
skip_covered = false
skip_empty = true
sort = "Name"

[tool.coverage.html]
directory = "htmlcov"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", "**/.*"]
typeCheckingMode = "strict"
reportGeneralTypeIssues = "error"
reportPrivateUsage = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"

[tool.poetry.scripts]
# Helper scripts for local development (convenience only)
check-db = "python scripts/check_db.py"
run-checks = "powershell -File scripts/run_checks.ps1"
