[project]
name = "assistant-matanne"
version = "0.1.0"
description = "Application web de gestion familiale Assistant Matanne"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "requests-oauthlib>=2.0.0,<3.0.0",
    "pandas>=2.1.4,<3.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "plotly>=5.18.0,<6.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "email-validator>=2.1.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "httpx>=0.27,<0.29",
    "jinja2>=3.1.0,<4.0.0",
    "mistralai>=1.0.0,<2.0.0",
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "vobject>=0.9.8,<1.0.0",
    "python-multipart>=0.0.6",
    "supabase>=2.3.0,<3.0.0",
    "PyJWT>=2.8.0,<3.0.0",
    "pyotp>=2.9.0,<3.0.0",
    "qrcode[pil]>=8.0,<9.0",
    "reportlab>=4.0.0,<5.0.0",
    "apscheduler>=3.10.0,<4.0.0",
    "resend>=0.8.0",
]

[project.optional-dependencies]
barcode = [
    "pyzbar>=0.1.9,<0.2.0",
    "opencv-python-headless>=4.9.0,<5.0.0",
]
cache = ["redis>=5.0.0,<6.0.0"]
email = []
ml = [
    "scikit-learn>=1.4.0,<2.0.0",
    "joblib>=1.3.0,<2.0.0",
]
monitoring = ["sentry-sdk[fastapi,sqlalchemy]>=2.0.0,<3.0.0"]

[project.scripts]
app = "main:run"

[tool.uv]
package = false

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
beautifulsoup4 = ">=4.12.0"
lxml = ">=4.9.0"
requests =">=2.31.0"
requests-oauthlib = "^2.0.0"
pandas = "^2.1.4"
python-dateutil = "^2.8.2"
plotly = "^5.18.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
email-validator = "^2.1.0"
python-dotenv = "^1.0.0"
httpx = ">=0.27,<0.29"
jinja2 = "^3.1.0"
mistralai = "^1.0.0"
# API REST
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
vobject = "^0.9.8"
python-multipart = ">=0.0.6"
# Authentication
supabase = "^2.3.0"
PyJWT = "^2.8.0"
# 2FA (TOTP)
pyotp = "^2.9.0"
qrcode = {version = "^8.0", extras = ["pil"]}
# Barcode scanning
pyzbar = {version = "^0.1.9", optional = true}
opencv-python-headless = {version = "^4.9.0", optional = true}
# Redis (production rate limiting & cache)
redis = {version = "^5.0.0", optional = true}
# PDF generation
reportlab = "^4.0.0"
# Scheduler
apscheduler = "^3.10.0"
# Email transactionnel
resend = ">=0.8.0"
# ML predictions (scikit-learn)
scikit-learn = {version = "^1.4.0", optional = true}
joblib = {version = "^1.3.0", optional = true}
# Error tracking (production)
sentry-sdk = {version = "^2.0.0", extras = ["fastapi", "sqlalchemy"], optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.2"
ruff = "^0.1.9"
mutmut = "^2.5.1"
schemathesis = "^3.39.16"
syrupy = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "E402", "E711", "E712", "E722", "E741", "B007", "B008", "B015", "B017", "B023", "B025", "B904", "C401", "C403", "C408", "C414", "C416", "F401", "F402", "F403", "F821", "F822", "F823", "F841", "UP035"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "@abstractmethod",
]
precision = 2
skip_covered = false
skip_empty = true
sort = "Name"

[tool.coverage.html]
directory = "htmlcov"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", "**/.*"]
typeCheckingMode = "strict"
reportGeneralTypeIssues = "error"
reportPrivateUsage = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"

[tool.mutmut]
paths_to_mutate = [
    "src/services/dashboard",
    "src/services/planning",
    "src/services/cuisine",
]
tests_dir = [
    "tests/services/dashboard",
    "tests/services/planning",
    "tests/services/recettes",
    "tests/services/courses",
    "tests/services/batch_cooking",
    "tests/services/inventaire",
]
runner = "python -m pytest tests/services/dashboard tests/services/planning tests/services/recettes tests/services/courses tests/services/batch_cooking tests/services/inventaire -q --confcutdir=tests"
pytest_add_cli_args_test_selection = ["--confcutdir=tests"]
also_copy = ["src/core", "src/services/core", "src/services/integrations"]
max_stack_depth = -1
do_not_mutate = [
    "**/__init__.py",
    "**/types.py",
]

[tool.poetry.scripts]
# Helper scripts for local development (convenience only)
check-db = "python scripts/db/check_db.py"
